albums-service/k8s/overlays/prod/image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: albums-service
spec:
  template:
    spec:
      containers:
        - name: albums-service
          image: image-registry.openshift-image-registry.svc.cluster.local:5000/right-lyrics/albums-service:1.0
