albums-service/k8s/overlays/prod/albums-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: albums-service
  name: albums-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: albums-service
